sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: not found: value end
  end = false
  ^AlgCombSort:7: error: not found: value end
  while(ecart!=1 && !end)
                     ^AlgCombSort:9: error: not found: value end
    end = true
    ^AlgCombSort:19: error: not found: value end
        end = false
        ^